Windows implementation of toWideString in text.cpp is incorrect.

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.1.2
    • Affects Version/s: None
    • Component/s: Internal Code
    • Environment:
      Windows
    • Windows
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Strings composed of sequences chars in the mongo code base are presumed to be UTF-8 encoded, but the implementation of toWideString converts based on the current process code page, which in client code may not be UTF-8. The correct implementation should always convert UTF-8 to wchar_t (UTF-16 on Windows Vista and later, I believe).

            Assignee:
            Tad Marshall
            Reporter:
            Andy Schwerin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: