SERVER-5597 Rewrite toWideString (Windows-only)

Use MultiByteToWideChar to convert UTF-8 to UTF-16 on Windows.